--- a/src/patternfly/components/MenuToggle/menu-toggle.hbs
+++ b/src/patternfly/components/MenuToggle/menu-toggle.hbs
@@ -78,9 +78,9 @@
         check--IsStandalone=true
       }}
   {{/if}}
-  {{!-- {{#if menu-toggle--icon}}
+  {{#if menu-toggle--icon}}
     {{> menu-toggle-icon}}
-  {{/if}} --}}
+  {{/if}}
   {{#if menu-toggle--text}}
     {{> menu-toggle-text}}
   {{/if}}
