--- a/src/patternfly/components/Table/table-th.hbs
+++ b/src/patternfly/components/Table/table-th.hbs
@@ -1,7 +1,4 @@
-{{#>
-  config
-  table-th--tag=(ternary table-th--tag table-th--tag 'th')
-}}
+{{#> config table-th--tag=(ternary table-th--tag table-th--tag 'th')}}
 
 <{{table-th--tag}} class="{{pfv}}table__th
   {{#if table-th--modifier}} {{table-th--modifier}}{{/if}}
