--- a/src/patternfly/demos/Toolbar/toolbar-template.hbs
+++ b/src/patternfly/demos/Toolbar/toolbar-template.hbs
@@ -32,7 +32,7 @@ Options: [
       {{!-- toggle group --}}
       {{#if toolbar-template--HasToggleGroup}}
         {{#> toolbar-group toolbar-group--IsToggleGroup=true toolbar-group--modifier="pf-m-show-on-xl"}}
-          {{> toolbar-toggle}}
+          {{> toolbar-toggle menu-toggle-icon='filter'}}
           {{> toolbar-template-content}}
         {{/toolbar-group}}
       {{else}}
