--- a/src/patternfly/components/Card/card.scss
+++ b/src/patternfly/components/Card/card.scss
@@ -37,6 +37,10 @@
   // Selectable/Clickable
   --#{$card}--m-selectable--BorderWidth: var(--#{$card}--BorderWidth);
 
+  // Clickable clicked
+  --#{$card}--m-clickable--m-current--BorderColor: var(--pf-t--global--border--color--clicked);
+  --#{$card}--m-clickable--m-current--BorderWidth: var(--pf-t--global--border--width--box--clicked);
+
   // Selected state (checked) of selectable card
   --#{$card}--m-selectable--m-selected--BorderColor: var(--pf-t--global--border--color--clicked);
   --#{$card}--m-selectable--m-selected--BorderWidth: var(--pf-t--global--border--width--box--clicked);
@@ -138,11 +142,18 @@
     }
   }
 
+  // CLICKABLE is clicked
+  &.pf-m-current {
+    --#{$card}--BorderColor: var(--#{$card}--m-clickable--m-current--BorderColor);
+    --#{$card}--BorderWidth: var(--#{$card}--m-clickable--m-current--BorderWidth);
+    --#{$card}--m-selectable--hover--BorderColor: var(--#{$card}--m-clickable--m-current--BorderColor);
+    --#{$card}--m-selectable--focus--BorderColor: var(--#{$card}--m-clickable--m-current--BorderColor);
+  }
+
   // stylelint-disable selector-max-class
   // Cards that are BOTH SELECTABLE AND CLICKABLE
   &.pf-m-selectable.pf-m-clickable {
-    .#{$card}__selectable-actions .#{$check}__label,
-    .#{$card}__selectable-actions .#{$radio}__label {
+    .#{$card}__selectable-actions :is(.#{$check}__label, .#{$radio}__label) {
       position: unset;
 
       &::before {
@@ -153,15 +164,13 @@
     }
 
     // When SELECTABLE and CLICKABLE card is focused, don't show change of background or border on the card
-    .#{$card}__selectable-actions .#{$check}__input:where(:focus-visible) ~ .#{$check}__label,
-    .#{$card}__selectable-actions .#{$radio}__input:where(:focus-visible) ~ .#{$radio}__label {
+    .#{$card}__selectable-actions :is(.#{$check}__input, .#{$radio}__input):where(:focus-visible) ~ :is(.#{$check}__label, .#{$radio}__label) {
       --#{$card}--BackgroundColor: revert;
       --#{$card}--BorderColor: revert;
     }
 
     // SELECTABLE and CLICKABLE card is selected (Check box checked or marked .pf-m-selected)
-    .#{$card}__selectable-actions .#{$check}__input:where(:checked) ~ .#{$check}__label,
-    .#{$card}__selectable-actions .#{$radio}__input:where(:checked) ~ .#{$radio}__label,
+    .#{$card}__selectable-actions :is(.#{$check}__input, .#{$radio}__input):where(:checked) ~ :is(.#{$check}__label, .#{$radio}__label),
     &.pf-m-selected {
       --#{$card}--BorderColor: revert;
       --#{$card}--m-selectable--BorderWidth: revert;
@@ -174,8 +183,7 @@
     }
 
     // SELECTABLE and CLICKABLE but DISABLED card
-    .#{$card}__selectable-actions .#{$check}__input:where(:disabled) ~ .#{$check}__label,
-    .#{$card}__selectable-actions .#{$radio}__input:where(:disabled) ~ .#{$radio}__label,
+    .#{$card}__selectable-actions :is(.#{$check}__input, .#{$radio}__input):where(:disabled) ~ :is(.#{$check}__label, .#{$radio}__label),
     &.pf-m-disabled {
       --#{$card}--BackgroundColor: var(--#{$card}--m-selectable--m-disabled--BackgroundColor);
     }
@@ -309,8 +317,7 @@
 }
 
 // Labels are used to handle states of selectable and clickable cards
-.#{$card}__selectable-actions .#{$check}__label,
-.#{$card}__selectable-actions .#{$radio}__label {
+.#{$card}__selectable-actions :is(.#{$check}__label, .#{$radio}__label, .#{$card}__clickable-action) {
   position: absolute;
   inset: 0;
   justify-self: auto;
@@ -332,36 +339,44 @@
 }
 
 // Selected card (checked)
-.#{$card}__selectable-actions .#{$check}__input:where(:checked) ~ .#{$check}__label,
-.#{$card}__selectable-actions .#{$radio}__input:where(:checked) ~ .#{$radio}__label,
+.#{$card}__selectable-actions :is(.#{$check}__input, .#{$radio}__input):where(:checked) ~ :is(.#{$radio}__label, .#{$check}__label),
 .#{$card}.pf-m-selected {
   --#{$card}--BorderColor: var(--#{$card}--m-selectable--m-selected--BorderColor);
   --#{$card}--m-selectable--BorderWidth: var(--#{$card}--m-selectable--m-selected--BorderWidth); // this line used to be just BorderWidth, not m-selectable
 }
 
 // Focus on the card (focus on label but not checked)
-.#{$card}__selectable-actions .#{$check}__input:where(:focus-visible) ~ .#{$check}__label,
-.#{$card}__selectable-actions .#{$radio}__input:where(:focus-visible) ~ .#{$radio}__label {
+.#{$card}__selectable-actions .#{$card}__clickable-action:where(:focus-visible),
+.#{$card}__selectable-actions :is(.#{$check}__input, .#{$radio}__input, .#{$card}__clickable-action):where(:focus-visible) ~ :is(.#{$check}__label, .#{$radio}__label) {
   --#{$card}--BorderColor: var(--#{$card}--m-selectable--focus--BorderColor);
   --#{$card}--BorderWidth: var(--#{$card}--m-selectable--focus--BorderWidth);
 }
 
 // Focus on a selected card (focus + checked)
-.#{$card}__selectable-actions .#{$check}__input:where(:focus-visible):where(:checked) ~ .#{$check}__label,
-.#{$card}__selectable-actions .#{$radio}__input:where(:focus-visible):where(:checked) ~ .#{$radio}__label {
+.#{$card}__selectable-actions :is(.#{$check}__input, .#{$radio}__input):where(:focus-visible):where(:checked) ~ :is(.#{$check}__label, .#{$radio}__label) {
   --#{$card}--BorderColor: var(--#{$card}--m-selectable--m-selected--focus--BorderColor);
   --#{$card}--BorderWidth: var(--#{$card}--m-selectable--m-selected--focus--BorderWidth);
 }
 
 // Disabled card
-.#{$card}__selectable-actions .#{$check}__input:where(:disabled) ~ .#{$check}__label,
-.#{$card}__selectable-actions .#{$radio}__input:where(:disabled) ~ .#{$radio}__label,
+.#{$card}__selectable-actions :is(.#{$check}__input, .#{$radio}__input):where(:disabled) ~ :is(.#{$check}__label, .#{$radio}__label),
 .#{$card}.pf-m-disabled {
   --#{$card}__title-text--Color: var(--#{$card}--m-selectable--m-disabled__title-text--Color);
   --#{$card}__body--Color: var(--#{$card}--m-selectable--m-disabled__body--Color);
   --#{$card}__footer--Color: var(--#{$card}--m-selectable--m-disabled__footer--Color);
   --#{$card}--BackgroundColor: var(--#{$card}--m-selectable--m-disabled--BackgroundColor);
   --#{$card}--BorderColor: var(--#{$card}--m-selectable--m-disabled--BorderColor);
+}
+
+.#{$card}__clickable-action {
+  background: none;
+  border: 0;
+  outline: 0;
+
+  &:disabled,
+  &.pf-m-disabled {
+    pointer-events: none;
+  }
 }
 
 .#{$card}__header,
